--- a/sample-textcapture/app/build.gradle
+++ b/sample-textcapture/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 26//23
     buildToolsVersion "23.0.2"
     defaultConfig {
         applicationId "com.abbyy.rtr.sample.textcapture"
         minSdkVersion 19
-        targetSdkVersion 22
+        targetSdkVersion 26//22
         versionCode 1
         versionName "1.0"
     }
@@ -37,4 +37,6 @@ dependencies {
     compile(name:'abbyy-rtr-sdk-1.0', ext:'aar')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
+    //compile 'com.android.support:appcompat-v7:26.0.0'
+    //compile 'com.android.support:support-v4:26.0.0'
 }
